Fix update button alignment on windows.

--- a/src/components/redesign.css
+++ b/src/components/redesign.css
@@ -113,6 +113,9 @@ html.platform-win .sidebarListRounded_c48ade {
 html.platform-win .trailing_c38106 :is(.recentsIcon_c99c29, .anchor_edefb8) {
 	transform: translateY(3px);
 }
+html.platform-win .trailing_c38106 .button__85643.iconWrapper__9293f[aria-label="Update Ready!"] {
+  transform: translateY(3px);
+}
 html.platform-osx .title_c38106 {
 	display: none !important;
 }
@@ -1961,6 +1964,16 @@ html .bar_c38106 {
 /* fix search bar when 3rd icon appears */
 .base_c48ade:has(.trailing_c38106 > :nth-child(3):not(.winButtons_c38106)) .search__49676 .searchBar__97492 {
 	margin-right: 120px !important;
+}
+
+.trailing_c38106 .iconWrapper__9293f {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.base_c48ade:has(.trailing_c38106 > :nth-child(4):not(.winButtons_c38106)) .winButtons_c38106 {
+  right: 0;
 }
 
 .spriteContainer__04eed {
